--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,7 +1,6 @@
 body {
-	font-family: 
-	sans-serif; 
-	background: #eee;
+	font-family: sans-serif; 
+	background: white;
 }
 
 a,h1,h2 { 
@@ -24,7 +23,7 @@ font-size: 1.5em;
 .page {
 	margin: 2em auto; 
 	width: 50em;
-	border: 5px solid #ccc; 
+    
 	padding: 0.8em; 
 	background: white;
 }
@@ -120,11 +119,11 @@ font-weight: bold;
 
 .button { 
 	background-color:#000; 
-	display:inline-block; 
+	display:inline-block;
 	color:#ffffff; 
 	font-size:13px; 
 	padding:3px 12px; 
-	margin: 0; 
+	margin: 20; 
 	text-decoration:none; 
 	position:relative;
 }
