--- a/templates/login.html
+++ b/templates/login.html
@@ -8,9 +8,9 @@
 	{{ form.csrf_token }}
 	<p>
 	<div class="login_text"><strong>Username: </strong><span class="log">{{ form.name }}</span></div>
-	<div class="login_text"><strong>Password: </strong><span class="log">{{ form.password }}</span></div>
-	<br> 
-	<input type="submit" value="Submit">
+	<div class="login_text"><strong>Password: </strong><span class="log">{{ form.password }}</span></div> 
+	<!-- <input type="submit" value="Submit"> -->
+    <button class="btn btn-sm btn-primary" type="submit">Login</button>
 	</p>
 </form>
 
