--- a/static/css/main.css
+++ b/static/css/main.css
@@ -17,13 +17,12 @@ h1 {
 }
 
 h2{
-font-size: 1.5em;
-
+	font-size: 1.5em;
 }
+
 .page {
 	margin: 2em auto; 
 	width: 50em;
-    
 	padding: 0.8em; 
 	background: white;
 }
@@ -66,8 +65,10 @@ font-size: 1.5em;
 }
 
 .error {
-	background: #F0D6D6; 
-	padding: 0.5em;
+	color: red;
+	font-size: 0.9em; 
+	padding-left: 15px;
+	background-color: white;
 }
 
 .datagrid table { 
