--- a/templates/_base.html
+++ b/templates/_base.html
@@ -1,18 +1,34 @@
-<!DOCTYPE html> <html>
+<!DOCTYPE html> 
+<html>
 <head>
 	<title>Welcome to FlaskTaskr!!</title>
+	<!-- Bootstrap -->
+	<link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.min.css')}}">
+	<!-- CSS stlysheet -->
 	<link rel="stylesheet" href="{{ url_for('static',
-		filename='css/main.css') }}"> 
+		filename='css/main.css')}}"> 
+
+	 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="{{ url_for('static', filename='js/jquery.js')}}"></script>
+
+     <!-- jQuery script for alerts -->
+    <script src="{{ url_for('static', filename='js/alert.js')}}"></script>
+
+    <!-- Include all compiled plugins (below) -->
+    <script src="{{ url_for('static', filename='js/bootstrap.min.js')}}"></script>
+
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    
 </head>
 <body>
 	<div class="page">
 
 		{% for message in get_flashed_messages() %} 
-			<div class="flash">{{ message }}</div>
+			<div class="alert alert-success alert-dismissible" role="alert"><button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>{{ message }}</div>
 		{% endfor %}
 
 		{% if error %}
-			<div class="error"><strong>Error:</strong> {{ error }}</div>
+			<div class="alert alert-danger fade in" role="alert"><strong>Error:</strong> {{ error }}</div>
 		{% endif %} 
 
 		<br>
