--- a/templates/_base.html
+++ b/templates/_base.html
@@ -1,27 +1,52 @@
 <!DOCTYPE html> 
 <html>
 <head>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge"> 
+	<meta name="viewport" content="width=device-width,initial-scale=1">
+	<meta name="description" content=""> 
+	<meta name="author" content="">
+
 	<title>Welcome to FlaskTaskr!!</title>
+
 	<!-- Bootstrap -->
 	<link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.min.css')}}">
 	<!-- CSS stlysheet -->
 	<link rel="stylesheet" href="{{ url_for('static',
-		filename='css/main.css')}}"> 
+		filename='css/main1.css')}}"> 
 
-	 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="{{ url_for('static', filename='js/jquery.js')}}"></script>
+    </head>
 
-     <!-- jQuery script for alerts -->
-    <script src="{{ url_for('static', filename='js/alert.js')}}"></script>
-
-    <!-- Include all compiled plugins (below) -->
-    <script src="{{ url_for('static', filename='js/bootstrap.min.js')}}"></script>
-
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    
-</head>
 <body>
-	<div class="page">
+	
+  <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+	<div class="container">
+		<div class="navbar-header">
+		  <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+		    <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span>
+		    <span class="icon-bar"></span>
+		    <span class="icon-bar"></span>
+		  </button>
+		  <a class="navbar-brand" href="/">FlaskTaskr</a> 
+		</div>
+		
+		<div class="collapse navbar-collapse">
+			<ul class="nav navbar-nav" id="bar">
+			{% if not session.logged_in %}
+			   <li><a href="/register">Signup</a></li> 
+			{% else %}
+			   <li><a href="/logout">Signout</a></li>
+			{% endif %}
+		    </ul> 
+		</div><!--/.nav-collapse -->
+     </div>
+  </div>
+<br>
+<br>
+<br>
+
+	<div class="container">
+	  <div class="content">
 
 		{% for message in get_flashed_messages() %} 
 			<div class="alert alert-success alert-dismissible" role="alert"><button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>{{ message }}</div>
@@ -31,10 +56,24 @@
 			<div class="alert alert-danger fade in" role="alert"><strong>Error:</strong> {{ error }}</div>
 		{% endif %} 
 
-		<br>
-
 		{% block content %} 
 		{% endblock %}
-	</div> 
-</body>
+
+	   </div>
+
+       <div class="footer">
+		  <hr>
+		  <p>&copy; <a href="https://www.realpython.com">RealPython</a></p> 
+	   </div>
+	</div><!-- /.container -->
+		
+
+ <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="{{ url_for('static', filename='js/jquery.js')}}"></script>
+     <!-- jQuery script for alerts -->
+    <script src="{{ url_for('static', filename='js/alert.js')}}"></script>
+    <!-- Include all compiled plugins (below) -->
+    <script src="{{ url_for('static', filename='js/bootstrap.min.js')}}"></script>
+
+  </body>
 </html>
